# kasuari

./: build.sh  clean.sh  flake.nix  i686-elf.txt  kernel.c  meson.build  meson_options.txt
arch/i686/: tty.c
kernel/: kernel.c
